<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_back_black_24dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" >

        <EditText
            android:id="@+id/signup_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/first_name"/>

        <EditText
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:id="@+id/edt_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:hint="@string/last_name"/>

        <EditText
            android:id="@+id/signup_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/signup_input_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:inputType="phone"
            android:hint="@string/contact_no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/select_ad_preference"
            android:layout_marginTop="20dp"
            android:inputType="phone" />

        <Spinner
            android:id="@+id/spn_ad_preference"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp" />

        <Button android:id="@+id/btn_save_profile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorDemoApp"
            android:text="@string/save_profile"
            android:layout_marginTop="30dp"
            android:onClick="saveData"
            android:textSize="24sp"
            android:textColor="@color/colorDashboard"
            android:textStyle="bold"/>





    </LinearLayout>
</LinearLayout>