<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

    <Button
        android:id="@+id/btn_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDashboard"
        android:layout_margin="25dp"
        android:padding="30dp"
        android:text="@string/profile"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btn_view_videos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDashboard"
        android:layout_margin="25dp"
        android:padding="30dp"
        android:text="@string/view_video"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btn_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDashboard"
        android:layout_margin="25dp"
        android:padding="30dp"
        android:text="@string/summary"
        android:textSize="18sp"/>

    </LinearLayout>



</LinearLayout>